# Sampling

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  runserver.sh
docker/backend/: Dockerfile  server-entrypoint.sh  worker-entrypoint.sh
mus/analysis/: apps.py  models.py  routers.py  serializers.py  signals.py  tests.py  utils.py  views.py
mus/analysis/migrations/: 0001_initial.py  0002_analysisparameters_generate_random_seed.py  0003_alter_analysis_sampled_units_count.py  0004_alter_analysis_sampled_units_count.py  0005_alter_analysisparameters_random_seed.py
mus/analysis/services/: main_analysis.py  read_data.py  utils.py  validators.py
mus/files_for_test/: mus_test2.txt
mus/importfiles/: apps.py  models.py  serializers.py  signals.py  storage.py  tasks.py  tests.py  views.py
mus/importfiles/migrations/: 0001_initial.py  0002_initialuploadedfile_by_user.py  0003_initialuploadedfile_txt_column_delimiter.py  0004_initialuploadedfile_validation_passed_filemetadata.py  0005_remove_initialuploadedfile_date_processed_and_more.py  0006_alter_initialuploadedfile_decimal_separator_and_more.py  0007_remove_filemetadata_id_alter_filemetadata_file.py  0008_alter_initialuploadedfile_initial_file.py
mus/importfiles/services/: BaseParser.py  file_processors.py  main.py  parsers.py  (+1 more)
mus/mus/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mus/musauth/: admin.py  apps.py  models.py  permissions.py  routers.py  serializers.py  views.py
mus/projects/: admin.py  models.py  routers.py  serializers.py  uils.py  views.py
(+9 files in other folders)
